Update 3.10_shield_defconfig for BT TEST
add python-gobject package and update defconfig for BT_TEST

--- a/configs/sama5d4_wilc3000_k3.10_shield_defconfig
+++ b/configs/sama5d4_wilc3000_k3.10_shield_defconfig
@@ -835,8 +835,8 @@ BR2_PACKAGE_DBUS=y
 BR2_DBUS_EXPAT=y
 # BR2_DBUS_LIBXML2 is not set
 # BR2_PACKAGE_DBUS_CPP is not set
-# BR2_PACKAGE_DBUS_GLIB is not set
-# BR2_PACKAGE_DBUS_PYTHON is not set
+BR2_PACKAGE_DBUS_GLIB=y
+BR2_PACKAGE_DBUS_PYTHON=y
 # BR2_PACKAGE_DBUS_TRIGGERD is not set
 BR2_PACKAGE_DEVMEM2=y
 # BR2_PACKAGE_DMRAID is not set
@@ -956,7 +956,7 @@ BR2_PACKAGE_PYTHON_PY_PYC=y
 # BR2_PACKAGE_PYTHON_BSDDB is not set
 # BR2_PACKAGE_PYTHON_CODECSCJK is not set
 # BR2_PACKAGE_PYTHON_CURSES is not set
-# BR2_PACKAGE_PYTHON_PYEXPAT is not set
+BR2_PACKAGE_PYTHON_PYEXPAT=y
 # BR2_PACKAGE_PYTHON_READLINE is not set
 # BR2_PACKAGE_PYTHON_SSL is not set
 BR2_PACKAGE_PYTHON_UNICODEDATA=y
@@ -970,6 +970,7 @@ BR2_PACKAGE_PYTHON_UCS2=y
 # external python modules
 #
 # BR2_PACKAGE_PYTHON_BOTTLE is not set
+BR2_PACKAGE_PYTHON_GOBJECT=y
 # BR2_PACKAGE_PYTHON_CONFIGOBJ is not set
 # BR2_PACKAGE_PYTHON_CRC16 is not set
 # BR2_PACKAGE_PYTHON_DIALOG is not set
