Enable mplayer package on buildroot
This patch updates buildroot defconfig file for mplayer.

Signed-off-by: Jude.Lee <jude.lee@atmel.com>

--- a/configs/sama5d4_wilc3000_k3.10_shield_defconfig
+++ b/configs/sama5d4_wilc3000_k3.10_shield_defconfig
@@ -295,7 +295,15 @@ BR2_PACKAGE_PROVIDES_LIBOPENMAX="bellagio"
 # BR2_PACKAGE_FFMPEG is not set
 # BR2_PACKAGE_FLAC is not set
 # BR2_PACKAGE_FLITE is not set
-# BR2_PACKAGE_GSTREAMER is not set
+BR2_PACKAGE_GSTREAMER=y
+BR2_PACKAGE_GSTREAMER_GST_DEBUG=y
+BR2_PACKAGE_GSTREAMER_PLUGIN_REGISTRY=y
+# BR2_PACKAGE_GST_PLUGINS_BASE is not set
+# BR2_PACKAGE_GST_PLUGINS_GOOD is not set
+# BR2_PACKAGE_GST_PLUGINS_BAD is not set
+# BR2_PACKAGE_GST_PLUGINS_UGLY is not set
+# BR2_PACKAGE_GST_FFMPEG is not set
+# BR2_PACKAGE_GST_FSL_PLUGINS is not set
 BR2_PACKAGE_GSTREAMER1=y
 BR2_PACKAGE_GSTREAMER1_PARSE=y
 BR2_PACKAGE_GSTREAMER1_TRACE=y
@@ -533,7 +541,9 @@ BR2_PACKAGE_LAME=y
 # BR2_PACKAGE_MADPLAY is not set
 # BR2_PACKAGE_MPD is not set
 BR2_PACKAGE_MPG123=y
-# BR2_PACKAGE_MPLAYER is not set
+BR2_PACKAGE_MPLAYER=y
+BR2_PACKAGE_MPLAYER_MPLAYER=y
+BR2_PACKAGE_MPLAYER_MENCODER=y
 # BR2_PACKAGE_MUSEPACK is not set
 # BR2_PACKAGE_OPUS_TOOLS is not set
 # BR2_PACKAGE_PULSEAUDIO is not set
@@ -1266,7 +1276,9 @@ BR2_PACKAGE_EXPAT=y
 # BR2_PACKAGE_LIBMMS is not set
 # BR2_PACKAGE_LIBMPEG2 is not set
 # BR2_PACKAGE_LIBOGG is not set
-# BR2_PACKAGE_LIBPLAYER is not set
+BR2_PACKAGE_LIBPLAYER=y
+BR2_PACKAGE_LIBPLAYER_MPLAYER=y
+BR2_PACKAGE_LIBPLAYER_GSTREAMER=y
 # BR2_PACKAGE_LIBTHEORA is not set
 # BR2_PACKAGE_LIVE555 is not set
 # BR2_PACKAGE_MEDIASTREAMER is not set
