Update buildroot defconfig for obex_test
This patch Updates buildroot defconfig file for BT file transfer test.
Enable OPENOBEX package.
Update kernel for Enable BT subsystem support.

Signed-off-by: Jude.Lee <jude.lee@atmel.com>

--- a/configs/sama5d4_wilc3000_k3.10_shield_defconfig
+++ b/configs/sama5d4_wilc3000_k3.10_shield_defconfig
@@ -230,8 +230,8 @@ BR2_LINUX_KERNEL_CUSTOM_GIT=y
 # BR2_LINUX_KERNEL_CUSTOM_HG is not set
 # BR2_LINUX_KERNEL_CUSTOM_LOCAL is not set
 BR2_LINUX_KERNEL_CUSTOM_REPO_URL="https://github.com/atwilc3000/linux4sam.git"
-BR2_LINUX_KERNEL_CUSTOM_REPO_VERSION="d6bdc873c4d5c92577bdc70ad57e6f246e762a4b"
-BR2_LINUX_KERNEL_VERSION="d6bdc873c4d5c92577bdc70ad57e6f246e762a4b"
+BR2_LINUX_KERNEL_CUSTOM_REPO_VERSION="731d7dff8eb3df7336ac23495dc91c9e7160ad34"
+BR2_LINUX_KERNEL_VERSION="731d7dff8eb3df7336ac23495dc91c9e7160ad34"
 BR2_LINUX_KERNEL_PATCH=""
 BR2_LINUX_KERNEL_USE_DEFCONFIG=y
 # BR2_LINUX_KERNEL_USE_CUSTOM_CONFIG is not set
@@ -1594,7 +1594,12 @@ BR2_PACKAGE_MII_DIAG=y
 # BR2_PACKAGE_NUTTCP is not set
 # BR2_PACKAGE_OLSR is not set
 # BR2_PACKAGE_OPENNTPD is not set
-# BR2_PACKAGE_OPENOBEX is not set
+BR2_PACKAGE_OPENOBEX=y
+BR2_PACKAGE_OPENOBEX_BLUEZ=y
+BR2_PACKAGE_OPENOBEX_LIBUSB=y
+BR2_PACKAGE_OPENOBEX_APPS=y
+BR2_PACKAGE_OPENOBEX_SYSLOG=y
+BR2_PACKAGE_OPENOBEX_DUMP=y
 BR2_PACKAGE_OPENSSH=y
 # BR2_PACKAGE_OPENSWAN is not set
 # BR2_PACKAGE_OPENVPN is not set
