--- a/configs/sama5d4_wilc3000_k3.10_shield_defconfig
+++ b/configs/sama5d4_wilc3000_k3.10_shield_defconfig
@@ -1633,7 +1633,7 @@ BR2_PACKAGE_PORTMAP=y
 # BR2_PACKAGE_TCPDUMP is not set
 # BR2_PACKAGE_TCPING is not set
 # BR2_PACKAGE_TCPREPLAY is not set
-BR2_PACKAGE_TFTPD=y
+# BR2_PACKAGE_TFTPD is not set
 # BR2_PACKAGE_THTTPD is not set
 # BR2_PACKAGE_TINYHTTPD is not set
 # BR2_PACKAGE_TN5250 is not set
@@ -1648,7 +1648,7 @@ BR2_PACKAGE_TFTPD=y
 # BR2_PACKAGE_USSP_PUSH is not set
 # BR2_PACKAGE_VDE2 is not set
 # BR2_PACKAGE_VPNC is not set
-# BR2_PACKAGE_VSFTPD is not set
+BR2_PACKAGE_VSFTPD=y
 # BR2_PACKAGE_VTUN is not set
 # BR2_PACKAGE_WGET is not set
 # BR2_PACKAGE_WIRELESS_REGDB is not set
