Update bluez version 5.16
This patch update bluez version 5.16 & add SDC package & enable pulseaudio
Update linux-kernel repository for enabling dma.

--- a/package/Config.in
+++ b/package/Config.in
@@ -512,6 +512,7 @@ source "package/libsoxr/Config.in"
 source "package/libvorbis/Config.in"
 source "package/opus/Config.in"
 source "package/portaudio/Config.in"
+source "package/sbc/Config.in"
 source "package/speex/Config.in"
 source "package/taglib/Config.in"
 source "package/tremor/Config.in"
