--- a/configs/sama5d4_wilc3000_k3.10_shield_defconfig
+++ b/configs/sama5d4_wilc3000_k3.10_shield_defconfig
@@ -230,8 +230,8 @@ BR2_LINUX_KERNEL_CUSTOM_GIT=y
 # BR2_LINUX_KERNEL_CUSTOM_HG is not set
 # BR2_LINUX_KERNEL_CUSTOM_LOCAL is not set
 BR2_LINUX_KERNEL_CUSTOM_REPO_URL="https://github.com/atwilc3000/linux4sam.git"
-BR2_LINUX_KERNEL_CUSTOM_REPO_VERSION="c8dff7df3bd769ff0331f9d7cf930cc73f64b7e1"
-BR2_LINUX_KERNEL_VERSION="c8dff7df3bd769ff0331f9d7cf930cc73f64b7e1"
+BR2_LINUX_KERNEL_CUSTOM_REPO_VERSION="a6c0aad54b7adcd1cfab7be3fdf32b4644369d87"
+BR2_LINUX_KERNEL_VERSION="a6c0aad54b7adcd1cfab7be3fdf32b4644369d87"
 BR2_LINUX_KERNEL_PATCH=""
 BR2_LINUX_KERNEL_USE_DEFCONFIG=y
 # BR2_LINUX_KERNEL_USE_CUSTOM_CONFIG is not set
@@ -546,7 +546,9 @@ BR2_PACKAGE_MPLAYER_MPLAYER=y
 BR2_PACKAGE_MPLAYER_MENCODER=y
 # BR2_PACKAGE_MUSEPACK is not set
 # BR2_PACKAGE_OPUS_TOOLS is not set
-# BR2_PACKAGE_PULSEAUDIO is not set
+BR2_PACKAGE_PULSEAUDIO=y
+# BR2_PACKAGE_PULSEAUDIO_DAEMON is not set
+BR2_PACKAGE_PULSEAUDIO_BLUEZ5=y
 # BR2_PACKAGE_TSTOOLS is not set
 # BR2_PACKAGE_VLC is not set
 # BR2_PACKAGE_VORBIS_TOOLS is not set
@@ -624,7 +626,7 @@ BR2_PACKAGE_BINUTILS_TARGET=y
 # BR2_PACKAGE_GPERF is not set
 # BR2_PACKAGE_GREP is not set
 # BR2_PACKAGE_JQ is not set
-# BR2_PACKAGE_LIBTOOL is not set
+BR2_PACKAGE_LIBTOOL=y
 # BR2_PACKAGE_MAKE is not set
 # BR2_PACKAGE_PATCH is not set
 # BR2_PACKAGE_PKGCONF is not set
@@ -1067,7 +1069,9 @@ BR2_PACKAGE_LIBSNDFILE=y
 # BR2_PACKAGE_LIBVORBIS is not set
 # BR2_PACKAGE_OPUS is not set
 # BR2_PACKAGE_PORTAUDIO is not set
-# BR2_PACKAGE_SPEEX is not set
+BR2_PACKAGE_SBC=y
+BR2_PACKAGE_SPEEX=y
+BR2_PACKAGE_SPEEX_ARM5E=y
 # BR2_PACKAGE_TAGLIB is not set
 # BR2_PACKAGE_TREMOR is not set
 # BR2_PACKAGE_VO_AACENC is not set
@@ -1236,7 +1240,7 @@ BR2_PACKAGE_TSLIB=y
 BR2_PACKAGE_EXPAT=y
 # BR2_PACKAGE_EZXML is not set
 # BR2_PACKAGE_JANSSON is not set
-# BR2_PACKAGE_JSON_C is not set
+BR2_PACKAGE_JSON_C=y
 # BR2_PACKAGE_JSON_GLIB is not set
 # BR2_PACKAGE_LIBJSON is not set
 # BR2_PACKAGE_LIBROXML is not set
@@ -1275,7 +1279,7 @@ BR2_PACKAGE_EXPAT=y
 # BR2_PACKAGE_LIBMATROSKA is not set
 # BR2_PACKAGE_LIBMMS is not set
 # BR2_PACKAGE_LIBMPEG2 is not set
-# BR2_PACKAGE_LIBOGG is not set
+BR2_PACKAGE_LIBOGG=y
 BR2_PACKAGE_LIBPLAYER=y
 BR2_PACKAGE_LIBPLAYER_MPLAYER=y
 BR2_PACKAGE_LIBPLAYER_GSTREAMER=y
