--- a/package/pulseaudio/Config.in
+++ b/package/pulseaudio/Config.in
@@ -7,6 +7,7 @@ config BR2_PACKAGE_PULSEAUDIO
 	select BR2_PACKAGE_LIBSNDFILE
 	select BR2_PACKAGE_SPEEX
 	depends on BR2_LARGEFILE
+	depends on BR2_PACKAGE_SBC
 	depends on BR2_USE_MMU # fork()
 	help
 	  PulseAudio is a sound system for POSIX OSes, meaning that it
@@ -27,6 +28,11 @@ config BR2_PACKAGE_PULSEAUDIO_DAEMON
 	  PulseAudio can be started as a system daemon. This is not the
 	  recommended way of using PulseAudio unless you are building a
 	  headless system.
+
+config BR2_PACKAGE_PULSEAUDIO_BLUEZ5
+	bool "support Bluez5"
+	help
+	  PulseAudio support BLUEZ5.
 
 endif
 
