--- a/configs/sama5d4_wilc3000_k3.18_shield_defconfig
+++ b/configs/sama5d4_wilc3000_k3.18_shield_defconfig
@@ -230,8 +230,8 @@ BR2_LINUX_KERNEL_CUSTOM_GIT=y
 # BR2_LINUX_KERNEL_CUSTOM_HG is not set
 # BR2_LINUX_KERNEL_CUSTOM_LOCAL is not set
 BR2_LINUX_KERNEL_CUSTOM_REPO_URL="https://github.com/atwilc3000/linux4sam.git"
-BR2_LINUX_KERNEL_CUSTOM_REPO_VERSION="af12fe996a439284aa68c5e4bd5327e24101ba5e"
-BR2_LINUX_KERNEL_VERSION="af12fe996a439284aa68c5e4bd5327e24101ba5e"
+BR2_LINUX_KERNEL_CUSTOM_REPO_VERSION="1b0f3597d3a892fcfac4ce4c973d08d55f2321f6"
+BR2_LINUX_KERNEL_VERSION="1b0f3597d3a892fcfac4ce4c973d08d55f2321f6"
 BR2_LINUX_KERNEL_PATCH=""
 BR2_LINUX_KERNEL_USE_DEFCONFIG=y
 # BR2_LINUX_KERNEL_USE_CUSTOM_CONFIG is not set
@@ -295,7 +295,15 @@ BR2_PACKAGE_PROVIDES_LIBOPENMAX="bellagio"
 # BR2_PACKAGE_FFMPEG is not set
 # BR2_PACKAGE_FLAC is not set
 # BR2_PACKAGE_FLITE is not set
-# BR2_PACKAGE_GSTREAMER is not set
+BR2_PACKAGE_GSTREAMER=y
+BR2_PACKAGE_GSTREAMER_GST_DEBUG=y
+BR2_PACKAGE_GSTREAMER_PLUGIN_REGISTRY=y
+# BR2_PACKAGE_GST_PLUGINS_BASE is not set
+# BR2_PACKAGE_GST_PLUGINS_GOOD is not set
+# BR2_PACKAGE_GST_PLUGINS_BAD is not set
+# BR2_PACKAGE_GST_PLUGINS_UGLY is not set
+# BR2_PACKAGE_GST_FFMPEG is not set
+# BR2_PACKAGE_GST_FSL_PLUGINS is not set
 BR2_PACKAGE_GSTREAMER1=y
 BR2_PACKAGE_GSTREAMER1_PARSE=y
 BR2_PACKAGE_GSTREAMER1_TRACE=y
@@ -533,10 +541,14 @@ BR2_PACKAGE_LAME=y
 # BR2_PACKAGE_MADPLAY is not set
 # BR2_PACKAGE_MPD is not set
 BR2_PACKAGE_MPG123=y
-# BR2_PACKAGE_MPLAYER is not set
+BR2_PACKAGE_MPLAYER=y
+BR2_PACKAGE_MPLAYER_MPLAYER=y
+BR2_PACKAGE_MPLAYER_MENCODER=y
 # BR2_PACKAGE_MUSEPACK is not set
 # BR2_PACKAGE_OPUS_TOOLS is not set
-# BR2_PACKAGE_PULSEAUDIO is not set
+BR2_PACKAGE_PULSEAUDIO=y
+# BR2_PACKAGE_PULSEAUDIO_DAEMON is not set
+BR2_PACKAGE_PULSEAUDIO_BLUEZ5=y
 # BR2_PACKAGE_TSTOOLS is not set
 # BR2_PACKAGE_VLC is not set
 # BR2_PACKAGE_VORBIS_TOOLS is not set
@@ -550,7 +562,7 @@ BR2_PACKAGE_MPG123=y
 #
 # Compressors and decompressors
 #
-BR2_PACKAGE_BZIP2=y
+# BR2_PACKAGE_BZIP2 is not set
 # BR2_PACKAGE_GZIP is not set
 # BR2_PACKAGE_INFOZIP is not set
 # BR2_PACKAGE_LZIP is not set
@@ -614,7 +626,7 @@ BR2_PACKAGE_BINUTILS_TARGET=y
 # BR2_PACKAGE_GPERF is not set
 # BR2_PACKAGE_GREP is not set
 # BR2_PACKAGE_JQ is not set
-# BR2_PACKAGE_LIBTOOL is not set
+BR2_PACKAGE_LIBTOOL=y
 # BR2_PACKAGE_MAKE is not set
 # BR2_PACKAGE_PATCH is not set
 # BR2_PACKAGE_PKGCONF is not set
@@ -757,32 +769,7 @@ BR2_PACKAGE_FBV_GIF=y
 # BR2_PACKAGE_OCRAD is not set
 # BR2_PACKAGE_PSPLASH is not set
 # BR2_PACKAGE_SAWMAN is not set
-BR2_PACKAGE_SDL=y
-BR2_PACKAGE_SDL_FBCON=y
-# BR2_PACKAGE_SDL_DIRECTFB is not set
-# BR2_PACKAGE_SDL_GFX is not set
-BR2_PACKAGE_SDL_IMAGE=y
-
-#
-# SDL_image file format support
-#
-BR2_PACKAGE_SDL_IMAGE_BMP=y
-# BR2_PACKAGE_SDL_IMAGE_GIF is not set
-BR2_PACKAGE_SDL_IMAGE_JPEG=y
-# BR2_PACKAGE_SDL_IMAGE_LBM is not set
-# BR2_PACKAGE_SDL_IMAGE_PCX is not set
-BR2_PACKAGE_SDL_IMAGE_PNG=y
-# BR2_PACKAGE_SDL_IMAGE_PNM is not set
-# BR2_PACKAGE_SDL_IMAGE_TARGA is not set
-# BR2_PACKAGE_SDL_IMAGE_TIFF is not set
-# BR2_PACKAGE_SDL_IMAGE_WEBP is not set
-# BR2_PACKAGE_SDL_IMAGE_XCF is not set
-# BR2_PACKAGE_SDL_IMAGE_XPM is not set
-# BR2_PACKAGE_SDL_IMAGE_XV is not set
-BR2_PACKAGE_SDL_MIXER=y
-# BR2_PACKAGE_SDL_NET is not set
-# BR2_PACKAGE_SDL_SOUND is not set
-BR2_PACKAGE_SDL_TTF=y
+# BR2_PACKAGE_SDL is not set
 
 #
 # Other GUIs
@@ -835,8 +822,8 @@ BR2_PACKAGE_DBUS=y
 BR2_DBUS_EXPAT=y
 # BR2_DBUS_LIBXML2 is not set
 # BR2_PACKAGE_DBUS_CPP is not set
-# BR2_PACKAGE_DBUS_GLIB is not set
-# BR2_PACKAGE_DBUS_PYTHON is not set
+BR2_PACKAGE_DBUS_GLIB=y
+BR2_PACKAGE_DBUS_PYTHON=y
 # BR2_PACKAGE_DBUS_TRIGGERD is not set
 BR2_PACKAGE_DEVMEM2=y
 # BR2_PACKAGE_DMRAID is not set
@@ -956,7 +943,7 @@ BR2_PACKAGE_PYTHON_PY_PYC=y
 # BR2_PACKAGE_PYTHON_BSDDB is not set
 # BR2_PACKAGE_PYTHON_CODECSCJK is not set
 # BR2_PACKAGE_PYTHON_CURSES is not set
-# BR2_PACKAGE_PYTHON_PYEXPAT is not set
+BR2_PACKAGE_PYTHON_PYEXPAT=y
 # BR2_PACKAGE_PYTHON_READLINE is not set
 # BR2_PACKAGE_PYTHON_SSL is not set
 BR2_PACKAGE_PYTHON_UNICODEDATA=y
@@ -970,6 +957,7 @@ BR2_PACKAGE_PYTHON_UCS2=y
 # external python modules
 #
 # BR2_PACKAGE_PYTHON_BOTTLE is not set
+BR2_PACKAGE_PYTHON_GOBJECT=y
 # BR2_PACKAGE_PYTHON_CONFIGOBJ is not set
 # BR2_PACKAGE_PYTHON_CRC16 is not set
 # BR2_PACKAGE_PYTHON_DIALOG is not set
@@ -1056,7 +1044,9 @@ BR2_PACKAGE_LIBSNDFILE=y
 # BR2_PACKAGE_LIBVORBIS is not set
 # BR2_PACKAGE_OPUS is not set
 # BR2_PACKAGE_PORTAUDIO is not set
-# BR2_PACKAGE_SPEEX is not set
+BR2_PACKAGE_SBC=y
+BR2_PACKAGE_SPEEX=y
+BR2_PACKAGE_SPEEX_ARM5E=y
 # BR2_PACKAGE_TAGLIB is not set
 # BR2_PACKAGE_TREMOR is not set
 # BR2_PACKAGE_VO_AACENC is not set
@@ -1074,7 +1064,7 @@ BR2_PACKAGE_ZLIB=y
 # Crypto
 #
 # BR2_PACKAGE_BEECRYPT is not set
-BR2_PACKAGE_CA_CERTIFICATES=y
+# BR2_PACKAGE_CA_CERTIFICATES is not set
 # BR2_PACKAGE_CRYPTODEV is not set
 # BR2_PACKAGE_GNUTLS is not set
 # BR2_PACKAGE_LIBASSUAN is not set
@@ -1096,30 +1086,19 @@ BR2_PACKAGE_OPENSSL_ENGINES=y
 #
 # Database
 #
-BR2_PACKAGE_BERKELEYDB=y
-# BR2_PACKAGE_BERKELEYDB_COMPAT185 is not set
-# BR2_PACKAGE_BERKELEYDB_TOOLS is not set
-# BR2_PACKAGE_CPPDB is not set
+# BR2_PACKAGE_BERKELEYDB is not set
 # BR2_PACKAGE_GDBM is not set
 # BR2_PACKAGE_MYSQL is not set
 # BR2_PACKAGE_POSTGRESQL is not set
 # BR2_PACKAGE_REDIS is not set
-
-#
-# sqlcipher conflicts with sqlite
-#
-BR2_PACKAGE_SQLITE=y
-# BR2_PACKAGE_SQLITE_READLINE is not set
-# BR2_PACKAGE_SQLITE_STAT3 is not set
-# BR2_PACKAGE_SQLITE_ENABLE_FTS3 is not set
-# BR2_PACKAGE_SQLITE_ENABLE_UNLOCK_NOTIFY is not set
-# BR2_PACKAGE_SQLITE_SECURE_DELETE is not set
+# BR2_PACKAGE_SQLCIPHER is not set
+# BR2_PACKAGE_SQLITE is not set
 
 #
 # Filesystem
 #
 # BR2_PACKAGE_GAMIN is not set
-BR2_PACKAGE_LIBCONFIG=y
+# BR2_PACKAGE_LIBCONFIG is not set
 # BR2_PACKAGE_LIBCONFUSE is not set
 # BR2_PACKAGE_LIBFUSE is not set
 # BR2_PACKAGE_LIBLOCKFILE is not set
@@ -1194,7 +1173,7 @@ BR2_PACKAGE_WEBKIT_ARCH_SUPPORTS=y
 # BR2_PACKAGE_LIBSERIAL is not set
 # BR2_PACKAGE_LIBSOC is not set
 BR2_PACKAGE_LIBUSB=y
-BR2_PACKAGE_LIBUSB_COMPAT=y
+# BR2_PACKAGE_LIBUSB_COMPAT is not set
 # BR2_PACKAGE_LIBV4L is not set
 # BR2_PACKAGE_LIBXKBCOMMON is not set
 # BR2_PACKAGE_MTDEV is not set
@@ -1225,7 +1204,7 @@ BR2_PACKAGE_TSLIB=y
 BR2_PACKAGE_EXPAT=y
 # BR2_PACKAGE_EZXML is not set
 # BR2_PACKAGE_JANSSON is not set
-# BR2_PACKAGE_JSON_C is not set
+BR2_PACKAGE_JSON_C=y
 # BR2_PACKAGE_JSON_GLIB is not set
 # BR2_PACKAGE_LIBJSON is not set
 # BR2_PACKAGE_LIBROXML is not set
@@ -1264,8 +1243,10 @@ BR2_PACKAGE_EXPAT=y
 # BR2_PACKAGE_LIBMATROSKA is not set
 # BR2_PACKAGE_LIBMMS is not set
 # BR2_PACKAGE_LIBMPEG2 is not set
-# BR2_PACKAGE_LIBOGG is not set
-# BR2_PACKAGE_LIBPLAYER is not set
+BR2_PACKAGE_LIBOGG=y
+BR2_PACKAGE_LIBPLAYER=y
+BR2_PACKAGE_LIBPLAYER_MPLAYER=y
+BR2_PACKAGE_LIBPLAYER_GSTREAMER=y
 # BR2_PACKAGE_LIBTHEORA is not set
 # BR2_PACKAGE_LIVE555 is not set
 # BR2_PACKAGE_MEDIASTREAMER is not set
@@ -1308,7 +1289,7 @@ BR2_PACKAGE_LIBNL_TOOLS=y
 # BR2_PACKAGE_LIBOAUTH is not set
 # BR2_PACKAGE_LIBOPING is not set
 # BR2_PACKAGE_LIBOSIP2 is not set
-BR2_PACKAGE_LIBPCAP=y
+# BR2_PACKAGE_LIBPCAP is not set
 # BR2_PACKAGE_LIBRSYNC is not set
 # BR2_PACKAGE_LIBSOCKETCAN is not set
 # BR2_PACKAGE_LIBSHAIRPLAY is not set
@@ -1330,8 +1311,7 @@ BR2_PACKAGE_LIBPCAP=y
 # BR2_PACKAGE_THRIFT is not set
 # BR2_PACKAGE_USBREDIR is not set
 # BR2_PACKAGE_WVSTREAMS is not set
-BR2_PACKAGE_ZEROMQ=y
-# BR2_PACKAGE_ZEROMQ_PGM is not set
+# BR2_PACKAGE_ZEROMQ is not set
 # BR2_PACKAGE_ZMQPP is not set
 # BR2_PACKAGE_ZYRE is not set
 
@@ -1342,33 +1322,7 @@ BR2_PACKAGE_ZEROMQ=y
 # BR2_PACKAGE_APR_UTIL is not set
 # BR2_PACKAGE_ARGP_STANDALONE is not set
 # BR2_PACKAGE_ARMADILLO is not set
-BR2_PACKAGE_BOOST=y
-BR2_PACKAGE_BOOST_LAYOUT_SYSTEM=y
-# BR2_PACKAGE_BOOST_LAYOUT_TAGGED is not set
-# BR2_PACKAGE_BOOST_LAYOUT_VERSIONED is not set
-BR2_PACKAGE_BOOST_LAYOUT="system"
-# BR2_PACKAGE_BOOST_CHRONO is not set
-# BR2_PACKAGE_BOOST_CONTEXT is not set
-# BR2_PACKAGE_BOOST_DATE_TIME is not set
-# BR2_PACKAGE_BOOST_EXCEPTION is not set
-# BR2_PACKAGE_BOOST_FILESYSTEM is not set
-# BR2_PACKAGE_BOOST_GRAPH is not set
-# BR2_PACKAGE_BOOST_GRAPH_PARALLEL is not set
-# BR2_PACKAGE_BOOST_IOSTREAMS is not set
-# BR2_PACKAGE_BOOST_LOCALE is not set
-# BR2_PACKAGE_BOOST_MATH is not set
-# BR2_PACKAGE_BOOST_MPI is not set
-# BR2_PACKAGE_BOOST_PROGRAM_OPTIONS is not set
-BR2_PACKAGE_BOOST_PYTHON=y
-# BR2_PACKAGE_BOOST_RANDOM is not set
-# BR2_PACKAGE_BOOST_REGEX is not set
-# BR2_PACKAGE_BOOST_SERIALIZATION is not set
-# BR2_PACKAGE_BOOST_SIGNALS is not set
-# BR2_PACKAGE_BOOST_SYSTEM is not set
-# BR2_PACKAGE_BOOST_TEST is not set
-# BR2_PACKAGE_BOOST_THREAD is not set
-# BR2_PACKAGE_BOOST_TIMER is not set
-# BR2_PACKAGE_BOOST_WAVE is not set
+# BR2_PACKAGE_BOOST is not set
 # BR2_PACKAGE_CLAPACK is not set
 # BR2_PACKAGE_CPPCMS is not set
 # BR2_PACKAGE_EIGEN is not set
@@ -1376,7 +1330,7 @@ BR2_PACKAGE_BOOST_PYTHON=y
 # BR2_PACKAGE_FFTW is not set
 # BR2_PACKAGE_FLANN is not set
 # BR2_PACKAGE_GLIBMM is not set
-BR2_PACKAGE_GMP=y
+# BR2_PACKAGE_GMP is not set
 # BR2_PACKAGE_GSL is not set
 # BR2_PACKAGE_GTEST is not set
 # BR2_PACKAGE_LIBARGTABLE2 is not set
@@ -1420,7 +1374,7 @@ BR2_PACKAGE_LIBNSPR_ARCH_SUPPORT=y
 #
 # BR2_PACKAGE_MPC is not set
 # BR2_PACKAGE_MPFR is not set
-BR2_PACKAGE_MSGPACK=y
+# BR2_PACKAGE_MSGPACK is not set
 # BR2_PACKAGE_MTDEV2TUIO is not set
 BR2_PACKAGE_ORC=y
 # BR2_PACKAGE_P11_KIT is not set
@@ -1581,7 +1535,12 @@ BR2_PACKAGE_MII_DIAG=y
 # BR2_PACKAGE_NUTTCP is not set
 # BR2_PACKAGE_OLSR is not set
 # BR2_PACKAGE_OPENNTPD is not set
-# BR2_PACKAGE_OPENOBEX is not set
+BR2_PACKAGE_OPENOBEX=y
+BR2_PACKAGE_OPENOBEX_BLUEZ=y
+BR2_PACKAGE_OPENOBEX_LIBUSB=y
+BR2_PACKAGE_OPENOBEX_APPS=y
+BR2_PACKAGE_OPENOBEX_SYSLOG=y
+BR2_PACKAGE_OPENOBEX_DUMP=y
 BR2_PACKAGE_OPENSSH=y
 # BR2_PACKAGE_OPENSWAN is not set
 # BR2_PACKAGE_OPENVPN is not set
@@ -1630,11 +1589,12 @@ BR2_PACKAGE_PORTMAP=y
 # BR2_PACKAGE_USSP_PUSH is not set
 # BR2_PACKAGE_VDE2 is not set
 # BR2_PACKAGE_VPNC is not set
-# BR2_PACKAGE_VSFTPD is not set
+BR2_PACKAGE_VSFTPD=y
 # BR2_PACKAGE_VTUN is not set
 # BR2_PACKAGE_WGET is not set
 # BR2_PACKAGE_WIRELESS_REGDB is not set
-# BR2_PACKAGE_WIRELESS_TOOLS is not set
+BR2_PACKAGE_WIRELESS_TOOLS=y
+BR2_PACKAGE_WIRELESS_TOOLS_LIB=y
 # BR2_PACKAGE_WIRESHARK is not set
 BR2_PACKAGE_WPA_SUPPLICANT=y
 BR2_PACKAGE_WPA_SUPPLICANT_EAP=y
@@ -1677,7 +1637,7 @@ BR2_PACKAGE_BASH=y
 # Utilities
 #
 # BR2_PACKAGE_AT is not set
-BR2_PACKAGE_DIALOG=y
+# BR2_PACKAGE_DIALOG is not set
 # BR2_PACKAGE_DTACH is not set
 # BR2_PACKAGE_FILE is not set
 # BR2_PACKAGE_GNUPG is not set
