Update kernel 4.1 shield config
This patch is update wilc3000 driver 11.03 for kernel 4.1 and enable packages.

Signed-off-by: Robin Hwang <robin.hwang@atmel.com>

--- a/configs/sama5d4_wilc3000_k4.1_shield_defconfig
+++ b/configs/sama5d4_wilc3000_k4.1_shield_defconfig
@@ -230,8 +230,8 @@ BR2_LINUX_KERNEL_CUSTOM_GIT=y
 # BR2_LINUX_KERNEL_CUSTOM_HG is not set
 # BR2_LINUX_KERNEL_CUSTOM_LOCAL is not set
 BR2_LINUX_KERNEL_CUSTOM_REPO_URL="https://github.com/atwilc3000/linux4sam.git"
-BR2_LINUX_KERNEL_CUSTOM_REPO_VERSION="f86af5c2767a978187bed33773d512d47b890666"
-BR2_LINUX_KERNEL_VERSION="f86af5c2767a978187bed33773d512d47b890666"
+BR2_LINUX_KERNEL_CUSTOM_REPO_VERSION="eefd4e0c35d8d47252a6fb7863070d3fe34ad478"
+BR2_LINUX_KERNEL_VERSION="eefd4e0c35d8d47252a6fb7863070d3fe34ad478"
 BR2_LINUX_KERNEL_PATCH=""
 BR2_LINUX_KERNEL_USE_DEFCONFIG=y
 # BR2_LINUX_KERNEL_USE_CUSTOM_CONFIG is not set
@@ -536,7 +536,9 @@ BR2_PACKAGE_MPG123=y
 # BR2_PACKAGE_MPLAYER is not set
 # BR2_PACKAGE_MUSEPACK is not set
 # BR2_PACKAGE_OPUS_TOOLS is not set
-# BR2_PACKAGE_PULSEAUDIO is not set
+BR2_PACKAGE_PULSEAUDIO=y
+# BR2_PACKAGE_PULSEAUDIO_DAEMON is not set
+BR2_PACKAGE_PULSEAUDIO_BLUEZ5=y
 # BR2_PACKAGE_TSTOOLS is not set
 # BR2_PACKAGE_VLC is not set
 # BR2_PACKAGE_VORBIS_TOOLS is not set
@@ -614,7 +616,7 @@ BR2_PACKAGE_BINUTILS_TARGET=y
 # BR2_PACKAGE_GPERF is not set
 # BR2_PACKAGE_GREP is not set
 # BR2_PACKAGE_JQ is not set
-# BR2_PACKAGE_LIBTOOL is not set
+BR2_PACKAGE_LIBTOOL=y
 # BR2_PACKAGE_MAKE is not set
 # BR2_PACKAGE_PATCH is not set
 # BR2_PACKAGE_PKGCONF is not set
@@ -945,6 +947,7 @@ BR2_PACKAGE_PYTHON_UCS2=y
 # external python modules
 #
 # BR2_PACKAGE_PYTHON_BOTTLE is not set
+# BR2_PACKAGE_PYTHON_GOBJECT is not set
 # BR2_PACKAGE_PYTHON_CONFIGOBJ is not set
 # BR2_PACKAGE_PYTHON_CRC16 is not set
 # BR2_PACKAGE_PYTHON_DIALOG is not set
@@ -1031,7 +1034,9 @@ BR2_PACKAGE_LIBSNDFILE=y
 # BR2_PACKAGE_LIBVORBIS is not set
 # BR2_PACKAGE_OPUS is not set
 # BR2_PACKAGE_PORTAUDIO is not set
-# BR2_PACKAGE_SPEEX is not set
+BR2_PACKAGE_SBC=y
+BR2_PACKAGE_SPEEX=y
+BR2_PACKAGE_SPEEX_ARM5E=y
 # BR2_PACKAGE_TAGLIB is not set
 # BR2_PACKAGE_TREMOR is not set
 # BR2_PACKAGE_VO_AACENC is not set
@@ -1189,7 +1194,7 @@ BR2_PACKAGE_TSLIB=y
 BR2_PACKAGE_EXPAT=y
 # BR2_PACKAGE_EZXML is not set
 # BR2_PACKAGE_JANSSON is not set
-# BR2_PACKAGE_JSON_C is not set
+BR2_PACKAGE_JSON_C=y
 # BR2_PACKAGE_JSON_GLIB is not set
 # BR2_PACKAGE_LIBJSON is not set
 # BR2_PACKAGE_LIBROXML is not set
@@ -1228,7 +1233,7 @@ BR2_PACKAGE_EXPAT=y
 # BR2_PACKAGE_LIBMATROSKA is not set
 # BR2_PACKAGE_LIBMMS is not set
 # BR2_PACKAGE_LIBMPEG2 is not set
-# BR2_PACKAGE_LIBOGG is not set
+BR2_PACKAGE_LIBOGG=y
 # BR2_PACKAGE_LIBPLAYER is not set
 # BR2_PACKAGE_LIBTHEORA is not set
 # BR2_PACKAGE_LIVE555 is not set
@@ -1518,7 +1523,12 @@ BR2_PACKAGE_MII_DIAG=y
 # BR2_PACKAGE_NUTTCP is not set
 # BR2_PACKAGE_OLSR is not set
 # BR2_PACKAGE_OPENNTPD is not set
-# BR2_PACKAGE_OPENOBEX is not set
+BR2_PACKAGE_OPENOBEX=y
+BR2_PACKAGE_OPENOBEX_BLUEZ=y
+BR2_PACKAGE_OPENOBEX_LIBUSB=y
+BR2_PACKAGE_OPENOBEX_APPS=y
+BR2_PACKAGE_OPENOBEX_SYSLOG=y
+BR2_PACKAGE_OPENOBEX_DUMP=y
 BR2_PACKAGE_OPENSSH=y
 # BR2_PACKAGE_OPENSWAN is not set
 # BR2_PACKAGE_OPENVPN is not set
