Add support for IPv6

--- a/configs/sama5d4_wilc3000_k3.18_shield_defconfig
+++ b/configs/sama5d4_wilc3000_k3.18_shield_defconfig
@@ -620,7 +620,7 @@ BR2_PACKAGE_BINUTILS_TARGET=y
 # BR2_PACKAGE_CVS is not set
 # BR2_PACKAGE_DIFFUTILS is not set
 # BR2_PACKAGE_FINDUTILS is not set
-# BR2_PACKAGE_FLEX is not set
+BR2_PACKAGE_FLEX=y
 # BR2_PACKAGE_GAWK is not set
 # BR2_PACKAGE_GIT is not set
 # BR2_PACKAGE_GPERF is not set
@@ -1340,7 +1340,7 @@ BR2_PACKAGE_LIBATOMIC_ARCH_SUPPORTS=y
 # BR2_PACKAGE_LIBCAP_NG is not set
 # BR2_PACKAGE_LIBCGROUP is not set
 # BR2_PACKAGE_LIBCOFI is not set
-# BR2_PACKAGE_LIBDAEMON is not set
+BR2_PACKAGE_LIBDAEMON=y
 # BR2_PACKAGE_LIBEE is not set
 # BR2_PACKAGE_LIBELF is not set
 # BR2_PACKAGE_LIBEV is not set
@@ -1553,7 +1553,7 @@ BR2_PACKAGE_PORTMAP=y
 # BR2_PACKAGE_PTPD is not set
 # BR2_PACKAGE_PTPD2 is not set
 # BR2_PACKAGE_QUAGGA is not set
-# BR2_PACKAGE_RADVD is not set
+BR2_PACKAGE_RADVD=y
 # BR2_PACKAGE_RPCBIND is not set
 # BR2_PACKAGE_RSH_REDONE is not set
 # BR2_PACKAGE_RSYNC is not set
