Updates from WILC release 14.03 * Using BlueZ 5.21 since 5.16 was removed from http://sources.buildroot.net/ * Updated firmware binares under system/skeleton/lib/firmware * Renamed configs/sama5d4_wilc3000_k3.18_shield_defconfig -> configs/sama5d4_wilc_k3.18_defconfig and updated linux kernel commit to the latest from linux4sam

--- a/configs/sama5d4_wilc_k3.18_defconfig
+++ b/configs/sama5d4_wilc_k3.18_defconfig
@@ -230,12 +230,12 @@ BR2_LINUX_KERNEL_CUSTOM_GIT=y
 # BR2_LINUX_KERNEL_CUSTOM_HG is not set
 # BR2_LINUX_KERNEL_CUSTOM_LOCAL is not set
 BR2_LINUX_KERNEL_CUSTOM_REPO_URL="https://github.com/atwilc3000/linux4sam.git"
-BR2_LINUX_KERNEL_CUSTOM_REPO_VERSION="e06fe699c32ca05919dcc32a2e79fcbc90bf955d"
-BR2_LINUX_KERNEL_VERSION="e06fe699c32ca05919dcc32a2e79fcbc90bf955d"
+BR2_LINUX_KERNEL_CUSTOM_REPO_VERSION="75fa528590ab01c9491f4146e86cee20a0fc9fb8"
+BR2_LINUX_KERNEL_VERSION="75fa528590ab01c9491f4146e86cee20a0fc9fb8"
 BR2_LINUX_KERNEL_PATCH=""
 BR2_LINUX_KERNEL_USE_DEFCONFIG=y
 # BR2_LINUX_KERNEL_USE_CUSTOM_CONFIG is not set
-BR2_LINUX_KERNEL_DEFCONFIG="sama5_wilc3000"
+BR2_LINUX_KERNEL_DEFCONFIG="sama5_wilc"
 # BR2_LINUX_KERNEL_UIMAGE is not set
 # BR2_LINUX_KERNEL_APPENDED_UIMAGE is not set
 BR2_LINUX_KERNEL_ZIMAGE=y
