--- a/configs/sama5d4_wilc_k3.18_defconfig
+++ b/configs/sama5d4_wilc_k3.18_defconfig
@@ -230,8 +230,8 @@ BR2_LINUX_KERNEL_CUSTOM_GIT=y
 # BR2_LINUX_KERNEL_CUSTOM_HG is not set
 # BR2_LINUX_KERNEL_CUSTOM_LOCAL is not set
 BR2_LINUX_KERNEL_CUSTOM_REPO_URL="https://github.com/atwilc3000/linux4sam.git"
-BR2_LINUX_KERNEL_CUSTOM_REPO_VERSION="75fa528590ab01c9491f4146e86cee20a0fc9fb8"
-BR2_LINUX_KERNEL_VERSION="75fa528590ab01c9491f4146e86cee20a0fc9fb8"
+BR2_LINUX_KERNEL_CUSTOM_REPO_VERSION="b82979f9e3cc64ad67ef789ed278d829a1f7cd0f"
+BR2_LINUX_KERNEL_VERSION="b82979f9e3cc64ad67ef789ed278d829a1f7cd0f"
 BR2_LINUX_KERNEL_PATCH=""
 BR2_LINUX_KERNEL_USE_DEFCONFIG=y
 # BR2_LINUX_KERNEL_USE_CUSTOM_CONFIG is not set
@@ -1068,8 +1068,8 @@ BR2_PACKAGE_ZLIB=y
 # BR2_PACKAGE_CRYPTODEV is not set
 # BR2_PACKAGE_GNUTLS is not set
 # BR2_PACKAGE_LIBASSUAN is not set
-# BR2_PACKAGE_LIBGCRYPT is not set
-# BR2_PACKAGE_LIBGPG_ERROR is not set
+BR2_PACKAGE_LIBGCRYPT=y
+BR2_PACKAGE_LIBGPG_ERROR=y
 # BR2_PACKAGE_LIBGPGME is not set
 # BR2_PACKAGE_LIBMCRYPT is not set
 # BR2_PACKAGE_LIBMHASH is not set
@@ -1462,7 +1462,7 @@ BR2_PACKAGE_CAN_UTILS=y
 # BR2_PACKAGE_CIVETWEB is not set
 # BR2_PACKAGE_CONNMAN is not set
 # BR2_PACKAGE_CONNTRACK_TOOLS is not set
-# BR2_PACKAGE_CRDA is not set
+BR2_PACKAGE_CRDA=y
 # BR2_PACKAGE_CTORRENT is not set
 # BR2_PACKAGE_CUPS is not set
 BR2_PACKAGE_DHCP=y
@@ -1592,7 +1592,7 @@ BR2_PACKAGE_RADVD=y
 BR2_PACKAGE_VSFTPD=y
 # BR2_PACKAGE_VTUN is not set
 # BR2_PACKAGE_WGET is not set
-# BR2_PACKAGE_WIRELESS_REGDB is not set
+BR2_PACKAGE_WIRELESS_REGDB=y
 BR2_PACKAGE_WIRELESS_TOOLS=y
 BR2_PACKAGE_WIRELESS_TOOLS_LIB=y
 # BR2_PACKAGE_WIRESHARK is not set
