Add WiFi Control API(CAPI) Agent to support WFA WiFi certification
- Can be built by selecting 'Target Packages->Network Applications->WiFi CAPI Agent' in menuconfig
- New files are added under package/wifi_capi directory

Signed-off-by: Kiran Venugopal <kiran.venugopal@microchip.com>

--- a/package/Config.in
+++ b/package/Config.in
@@ -1043,6 +1043,7 @@ source "package/wvdial/Config.in"
 source "package/xinetd/Config.in"
 source "package/xl2tp/Config.in"
 source "package/znc/Config.in"
+source "package/wifi_capi/Config.in"
 
 endmenu
 
