--- a/configs/sam5_wilc_defconfig
+++ b/configs/sam5_wilc_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Buildroot 2014.05-05838-g2f6eeae Configuration
+# Buildroot 2014.05-g6e0835d-dirty Configuration
 #
 BR2_HAVE_DOT_CONFIG=y
 BR2_HOSTARCH_NEEDS_IA32_LIBS=y
@@ -229,13 +229,13 @@ BR2_LINUX_KERNEL=y
 BR2_LINUX_KERNEL_CUSTOM_GIT=y
 # BR2_LINUX_KERNEL_CUSTOM_HG is not set
 # BR2_LINUX_KERNEL_CUSTOM_LOCAL is not set
-BR2_LINUX_KERNEL_CUSTOM_REPO_URL="https://github.com/atwilc3000/linux4sam.git"
-BR2_LINUX_KERNEL_CUSTOM_REPO_VERSION="b82979f9e3cc64ad67ef789ed278d829a1f7cd0f"
-BR2_LINUX_KERNEL_VERSION="b82979f9e3cc64ad67ef789ed278d829a1f7cd0f"
+BR2_LINUX_KERNEL_CUSTOM_REPO_URL="https://github.com/linux4wilc/linux-at91.git"
+BR2_LINUX_KERNEL_CUSTOM_REPO_VERSION="6291b865f49b1085d113d502343780d03f83b816"
+BR2_LINUX_KERNEL_VERSION="6291b865f49b1085d113d502343780d03f83b816"
 BR2_LINUX_KERNEL_PATCH=""
 BR2_LINUX_KERNEL_USE_DEFCONFIG=y
 # BR2_LINUX_KERNEL_USE_CUSTOM_CONFIG is not set
-BR2_LINUX_KERNEL_DEFCONFIG="sama5_wilc"
+BR2_LINUX_KERNEL_DEFCONFIG="sama5"
 # BR2_LINUX_KERNEL_UIMAGE is not set
 # BR2_LINUX_KERNEL_APPENDED_UIMAGE is not set
 BR2_LINUX_KERNEL_ZIMAGE=y
@@ -1591,7 +1591,7 @@ BR2_PACKAGE_RADVD=y
 # BR2_PACKAGE_VPNC is not set
 BR2_PACKAGE_VSFTPD=y
 # BR2_PACKAGE_VTUN is not set
-# BR2_PACKAGE_WGET is not set
+BR2_PACKAGE_WGET=y
 BR2_PACKAGE_WIRELESS_REGDB=y
 BR2_PACKAGE_WIRELESS_TOOLS=y
 BR2_PACKAGE_WIRELESS_TOOLS_LIB=y
@@ -1609,6 +1609,7 @@ BR2_PACKAGE_WPA_SUPPLICANT_WPS=y
 # BR2_PACKAGE_XINETD is not set
 # BR2_PACKAGE_XL2TP is not set
 # BR2_PACKAGE_ZNC is not set
+# BR2_PACKAGE_WIFI_CAPI is not set
 
 #
 # Package managers
