--- a/system/skeleton/etc/wilc_hostapd_wep.conf
+++ b/system/skeleton/etc/wilc_hostapd_wep.conf
@@ -14,10 +14,10 @@ auth_algs=1
 #########    WEP  ###########
 wep_default_key=0
 wep_key0=1234567890
-wep_key1="vwxyz"
-wep_key2=0102030405060708090a0b0c0d
-wep_key3=".2.4.6.8.0.23"
-wep_key_len_broadcast=5
+#wep_key1="vwxyz"
+#wep_key2=0102030405060708090a0b0c0d
+#wep_key3=".2.4.6.8.0.23"
+#wep_key_len_broadcast=5
 wep_key_len_unicast=5
 wep_rekey_period=300
 
