Added WFA testsuite CAPI agent package

--- a/configs/sama5_wilc_defconfig
+++ b/configs/sama5_wilc_defconfig
@@ -98,6 +98,7 @@ BR2_PACKAGE_MONGREL2_LIBC_SUPPORTS=y
 BR2_PACKAGE_OPENSSH=y
 BR2_PACKAGE_RADVD=y
 BR2_PACKAGE_WGET=y
+BR2_PACKAGE_WIFI_CAPI=y
 BR2_PACKAGE_WPA_SUPPLICANT=y
 BR2_PACKAGE_WPA_SUPPLICANT_NL80211=y
 BR2_PACKAGE_WPA_SUPPLICANT_AP_SUPPORT=y
