Adding newtools for testing monitor mode and file transfer. tcpdump, netcat, strace, busybox timeout
Signed-off-by: Adham Abozaeid <adham.abozaeid@microchip.com>

--- a/configs/sama5_wilc_defconfig
+++ b/configs/sama5_wilc_defconfig
@@ -48,6 +48,7 @@ BR2_PACKAGE_EXPAT=y
 BR2_PACKAGE_LIBOPENH264_ARCH_SUPPORTS=y
 BR2_PACKAGE_CANFESTIVAL_ARCH_SUPPORTS=y
 BR2_PACKAGE_LIBNL=y
+BR2_PACKAGE_LIBPCAP=y
 BR2_PACKAGE_CLASSPATH_ARCH_SUPPORTS=y
 BR2_PACKAGE_JEMALLOC_ARCH_SUPPORTS=y
 BR2_PACKAGE_LIBATOMIC_OPS_ARCH_SUPPORTS=y
@@ -59,6 +60,7 @@ BR2_PACKAGE_LIBSECCOMP_ARCH_SUPPORTS=y
 BR2_PACKAGE_LIBSIGSEGV_ARCH_SUPPORTS=y
 BR2_PACKAGE_LIBUNWIND_ARCH_SUPPORTS=y
 BR2_PACKAGE_LIBURCU_ARCH_SUPPORTS=y
+BR2_PACKAGE_STRACE=y
 BR2_PACKAGE_OPENBLAS_DEFAULT_TARGET="ARMV7"
 BR2_PACKAGE_OPENBLAS_ARCH_SUPPORTS=y
 BR2_PACKAGE_PROTOBUF_ARCH_SUPPORTS=y
@@ -95,8 +97,11 @@ BR2_PACKAGE_IPERF=y
 BR2_PACKAGE_IW=y
 BR2_PACKAGE_LRZSZ=y
 BR2_PACKAGE_MONGREL2_LIBC_SUPPORTS=y
+BR2_PACKAGE_NETCAT=y
 BR2_PACKAGE_OPENSSH=y
 BR2_PACKAGE_RADVD=y
+BR2_PACKAGE_TCPDUMP=y
+# BR2_PACKAGE_TCPDUMP_SMB is not set
 BR2_PACKAGE_WGET=y
 BR2_PACKAGE_WIFI_CAPI=y
 BR2_PACKAGE_WPA_SUPPLICANT=y
