--- a/configs/sama5_wilc_defconfig
+++ b/configs/sama5_wilc_defconfig
@@ -18,7 +18,7 @@ BR2_SYSTEM_DHCP="eth0"
 BR2_LINUX_KERNEL=y
 BR2_LINUX_KERNEL_CUSTOM_GIT=y
 BR2_LINUX_KERNEL_CUSTOM_REPO_URL="https://github.com/linux4wilc/linux-at91.git"
-BR2_LINUX_KERNEL_CUSTOM_REPO_VERSION="linux-4.9-at91_wilc_dev"
+BR2_LINUX_KERNEL_CUSTOM_REPO_VERSION="linux-4.9-at91"
 BR2_LINUX_KERNEL_DEFCONFIG="sama5"
 BR2_LINUX_KERNEL_DTS_SUPPORT=y
 BR2_LINUX_KERNEL_INTREE_DTS_NAME="at91-sama5d4_xplained at91-sama5d4_xplained_hdmi at91-sama5d4_xplained_pda4 at91-sama5d4_xplained_pda7 at91-sama5d4_xplained_pda7b"
