--- a/configs/sama5_wilc_defconfig
+++ b/configs/sama5_wilc_defconfig
@@ -98,7 +98,7 @@ BR2_PACKAGE_IPERF=y
 BR2_PACKAGE_IW=y
 BR2_PACKAGE_LRZSZ=y
 BR2_PACKAGE_MONGREL2_LIBC_SUPPORTS=y
-BR2_PACKAGE_NETCAT=y
+BR2_PACKAGE_NETCAT_OPENBSD=y
 BR2_PACKAGE_OPENSSH=y
 BR2_PACKAGE_RADVD=y
 BR2_PACKAGE_TCPDUMP=y
